--- a/2.1 Heading Element/index.html
+++ b/2.1 Heading Element/index.html
@@ -1,10 +1,13 @@
 <h1>Book</h1>
-  <h2>Chapter 1</h2>
-    <h3>Section 1</h3>
-    <h3>Section 2</h3>
-  <h2>Chapter 2</h2>
-    <h3>Section 1</h3>
-      <h4>Diagram 1</h4>
-  <h2>Chapter 3</h2>
-    <h3>Section 1</h3>
-    <h3>Section 2</h3>
+<h2>Chapter 1</h2>
+<h3>Section 1</h3>
+<h3>Section 2</h3>
+<h2>Chapter 2</h2>
+<h3>Section 1</h3>
+<h4>Diagram 1</h4>
+<h2>Chapter 3</h2>
+<h3>Section 1</h3>
+<h3>Section 2</h3>
+<h5>Section 3</h5>
+<h6>Section 4</h6>
+<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/Heading_Elements">Link to Mozilla docs</a>
